<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="DetailviewModel"
        type="com.example.konrad.portfolio.ui.countries.CountryDetail.CountryDetailViewModel" />
</data>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.countries.CountryDetail.CountryDetailActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <ImageView
            android:id="@+id/detail_country_flag"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:imageUrl="@{DetailviewModel.getCountryFlagUrl()}"
            android:gradientRadius="200"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1"
            android:gravity="center">

            <TableRow
                android:background="#FFFFFF"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >
                <TableRow
                    android:background="#000000"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    >



                </TableRow>
            </TableRow>
            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Common"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/common_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:mutableText="@{DetailviewModel.getCountryCommonName()}"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/alphaCode"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/official_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:mutableText="@{DetailviewModel.getCountryAlphaCode()}"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
            </TableRow>



            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Demonym"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/common_native_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:mutableText="@{DetailviewModel.getCountryDemonym()}"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/OfficialNative"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/official_native_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:mutableText="@{DetailviewModel.getCountryOfficialNative()}"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
            </TableRow>

            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/AlternativeSpellings"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/alternative_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    app:mutableText="@{DetailviewModel.getCountryAlternativeSpelling()}"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
            </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>


    </LinearLayout>
</layout>